--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:browser-live-server.helloWorld"
+		"onCommand:browser-live-server.startServer",
+		"onCommand:browser-live-server.stopServer"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "browser-live-server.helloWorld",
+				"command": "browser-live-server.startServer",
 				"title": "Iniciar Servidor Local"
+			},
+			{
+				"command": "browser-live-server.stopServer",
+				"title": "Detener Servidor Local"
 			}
 		]
 	},
