--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
 		"watch": "tsc -watch -p ./",
 		"pretest": "yarn run compile && yarn run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"build:package": "vsce package --no-yarn"
 	},
 	"devDependencies": {
 		"@types/browser-sync": "^2.26.3",
