--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"typescript": "^4.6.4"
 	},
 	"dependencies": {
-		"browser-sync": "^2.27.10"
+		"browser-sync": "^2.27.10",
+		"ngrok": "^4.3.1"
 	}
 }
